--- a/css/animationLogo.css
+++ b/css/animationLogo.css
@@ -1,17 +1,18 @@
- /* The animation code */
-@keyframes animatedSquare {
-  0%   {background-color: red;}
-  25%  {background-color: yellow;}
-  50%  {background-color: blue;}
-  100% {background-color: green;}
+/* The animation code */
+@keyframes flip-animation {
+  50% {
+    transform: scaleX(-1);
+  }
+  100% {
+    transform: scaleX(1);
+  }
+
 }
 
-/* The element to apply the animation to */
-div {
-  width: 100px;
-  height: 100px;
-  background-color: red;
-  animation-name: animatedSquare;
-  animation-duration: 4s;
-  animation-iteration-count: infinite;    
-} 
+.image-animation {
+  transition: transform 0.5s;
+}
+
+.image-animation:hover {
+  transform: rotate(360deg);
+}
